@@ -770,12 +770,6 @@ class Query(object):
         context = QueryContext(self)
         from_obj = self._from_obj
 
-        alltables = []
-        for l in [sql_util.TableFinder(x) for x in from_obj]:
-            alltables += l
-
-        if self.table not in alltables:
-            from_obj.append(self.table)
         if self._nestable(**self._select_args()):
             s = sql.select([self.table], whereclause, from_obj=from_obj, **self._select_args()).alias('getcount').count()
         else:
@@ -832,13 +826,6 @@ class Query(object):
         # that we only load the appropriate types
         if self.select_mapper.single and self.select_mapper.polymorphic_on is not None and self.select_mapper.polymorphic_identity is not None:
             whereclause = sql.and_(whereclause, self.select_mapper.polymorphic_on.in_(*[m.polymorphic_identity for m in self.select_mapper.polymorphic_iterator()]))
-
-        alltables = []
-        for l in [sql_util.TableFinder(x) for x in from_obj]:
-            alltables += l
-
-        if self.table not in alltables:
-            from_obj.append(self.table)
 
         context.from_clauses = from_obj
         
